--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+:root
+{
+  --yellow: #6381e2;
+    --orange : #5564ba;
+    --black : #242D49;
+    --gray : #788097;
+    --blueCard : #DDF8FE;
+    --purple: rgb(238 210 255);
+    --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
+    --orangeCard: rgba(151, 101, 243, 0.45);
+    --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
+}
+/* {
+  --purpleLight: #6381e2;
+    --purple : #5564ba;
+    --black : #242D49;
+    --gray : #788097;
+    --blueCard : #DDF8FE;
+    --pink: rgb(238 210 255);
+    --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
+    --purpleCard: rgba(151, 101, 243, 0.45);
+    --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
+} */
 .App {
   text-align: center;
 }
